--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -633,6 +633,7 @@
           percent:
             type: 'raw:number'
             value: 50
+            configId: probability
             tags: ['skill_effect_probability']
 - id: effect_skill_add_mark_opponent_shaoshang_60_percent
   trigger: OnHit
@@ -8649,3 +8650,151 @@
       value: mark_yuecuoyueyong
   condition:
     type: selfUseSkill
+# 获得20点怒气
+- id: effect_skill_add_rage_20
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addRage
+    target: self
+    value: 20
+  condition:
+    type: selfUseSkill
+# 使自身获得水量充足
+- id: effect_skill_add_mark_shuiliangchongzu
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shuiliangchongzu
+  condition:
+    type: selfUseSkill
+# 使自身获得水量饱和
+- id: effect_skill_add_mark_shuiliangbaohe
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_shuiliangbaohe
+  condition:
+    type: selfUseSkill
+# 水量充足时使威力翻倍
+- id: effect_skill_power_2x_if_has_shuiliangchongzu
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shuiliangchongzu
+# 水量充足时使连击5次
+- id: effect_skill_multi_hit_5_times_if_has_shuiliangchongzu
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setMultihit
+    target: usingSkillContext
+    value: 5
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shuiliangchongzu
+# 50%几率使对手溺水
+- id: effect_skill_add_mark_opponent_nishui_50_percent
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_nishui
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_50_percent_template
+# 水量饱和时威力翻倍
+- id: effect_skill_power_2x_if_has_shuiliangbaohe
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shuiliangbaohe
+# 水量饱和时强化自身特攻1级
+- id: effect_skill_raise_spa_1_stage_if_shuiliangbaohe
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_self_statstage_+1_template
+    statType: spa
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shuiliangbaohe
+# 在技能命中后，如果存在水量饱和，消耗它
+- id: effect_skill_consume_mark_shuiliangbaohe
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: destroyMark
+    target:
+      base: selfMarks
+      chain:
+        - type: whereAttr
+          extractor:
+            type: base
+            arg: baseId
+          evaluator:
+            type: same
+            value: mark_shuiliangbaohe
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shuiliangbaohe
+# 在技能命中后，如果存在水量充足，消耗它
+- id: effect_skill_consume_mark_shuiliangchongzu
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: destroyMark
+    target:
+      base: selfMarks
+      chain:
+        - type: whereAttr
+          extractor:
+            type: base
+            arg: baseId
+          evaluator:
+            type: same
+            value: mark_shuiliangchongzu
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: selfHasMark
+        baseId: mark_shuiliangchongzu
