--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -1,3 +1,5 @@
+mark_shuiliangchongzu: 'https://seer2-resource.yuuinih.com/png/markImage/3069.png'
+mark_shuiliangbaohe: 'https://seer2-resource.yuuinih.com/png/markImage/3070.png'
 stat_stage_atk_down: https://seer2-resource.yuuinih.com/png/traitMark/atk_dec.png
 stat_stage_def_down: https://seer2-resource.yuuinih.com/png/traitMark/defense_dec.png
 stat_stage_spa_down: https://seer2-resource.yuuinih.com/png/traitMark/specialAtk_dec.png
