--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -1,3 +1,14 @@
+skill_xishui: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
+skill_qianglipenshui: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_003.mp3'
+skill_yinshui: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_003.mp3'
+skill_shuiqiangliansha: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_chaoshui: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_jiancizhangji: 'https://seer2-resource.yuuinih.com/sound/skill/03_1_002.mp3'
+skill_fanjiangdaohai: 'https://seer2-resource.yuuinih.com/sound/skill/10433.mp3'
+skill_dakouxi: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_002.mp3'
+skill_chaojishuiqiang: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_pensheshuiqiang: 'https://seer2-resource.yuuinih.com/sound/skill/03_2_002.mp3'
+skill_tunyinshuiyuan: 'https://seer2-resource.yuuinih.com/sound/skill/03_3_002.mp3'
 skill_fusudadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_001.mp3'
 skill_silieshabao: 'https://seer2-resource.yuuinih.com/sound/skill/09_2_001.mp3'
 skill_julidadi: 'https://seer2-resource.yuuinih.com/sound/skill/09_1_002.mp3'
