--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -1025,3 +1025,13 @@
     type: setSureMiss
     target: usingSkillContext
     priority: -1
+# 潮水: 潮水中的的溺水的触发几率增加10%
+- id: effect_emblem_increase_chaoshui_nishui_chance_10_percent
+  trigger: OnBattleStart
+  priority: 0
+  apply:
+    type: addConfigModifier
+    target: opponentPlayer
+    configKey: effect_skill_add_mark_opponent_nishui_50_percent.probability
+    modifierType: delta
+    value: 10
