--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -263,3 +263,9 @@
   tags: [ability]
   effect:
     - effect_ability_damage_reduction_50_percent_at_full_hp
+- id: mark_ability_xushui
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_shuiliangchongzu_increase_damage_5_percent
+    - effect_ability_shuiliangbaohe_increase_damage_10_percent
