--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -255,3 +255,8 @@
   tags: [emblem]
   effect:
     - effect_emblem_immune_skill_bandao
+- id: mark_emblem_chaoshui
+  config: *emblem_config
+  tags: [emblem]
+  effect:
+    - effect_emblem_increase_chaoshui_nishui_chance_10_percent
