--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -8311,3 +8311,143 @@
   tags: []
   effect:
     - effect_skill_add_mark_fantan
+- id: skill_xishui
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shuiliangchongzu
+    - effect_skill_add_rage_20
+- id: skill_qianglipenshui
+  element: Water
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_has_shuiliangchongzu
+    - effect_skill_consume_mark_shuiliangchongzu
+- id: skill_yinshui
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_quarter
+- id: skill_shuiqiangliansha
+  element: Water
+  category: Special
+  target: opponent
+  power: 35
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: [2, 5]
+  effect:
+    - effect_skill_multi_hit_5_times_if_has_shuiliangchongzu
+    - effect_skill_consume_mark_shuiliangchongzu
+- id: skill_chaoshui
+  element: Water
+  category: Special
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_nishui_50_percent
+- id: skill_jiancizhangji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 115
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect: []
+- id: skill_fanjiangdaohai
+  element: Water
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_20_percent
+- id: skill_dakouxi
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shuiliangchongzu
+    - effect_skill_add_mark_shuiliangbaohe
+    - effect_skill_add_rage_25
+- id: skill_chaojishuiqiang
+  element: Water
+  category: Special
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_has_shuiliangbaohe
+    - effect_skill_consume_mark_shuiliangbaohe
+- id: skill_pensheshuiqiang
+  element: Water
+  category: Special
+  target: opponent
+  power: 50
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  priority: 1
+  tags: []
+  effect: []
+- id: skill_tunyinshuiyuan
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage
+    - effect_skill_raise_spa_1_stage_if_shuiliangbaohe
+    - effect_skill_consume_mark_shuiliangbaohe
