--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -700,3 +700,15 @@ skill_guailijianita: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp
 skill_yongqichongzhuang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
 skill_zuli: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
 skill_jiancipifu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_huoyanzhihuan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_001.mp3'
+skill_huoyanzhizhua: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_002.mp3'
+skill_lieyanzhihuan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_002.mp3'
+skill_lieyanzhizhua: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_002.mp3'
+skill_jisuhuohuan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.mp3'
+skill_heiyanzhihuan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.mp3'
+skill_heiyanzhizhua: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_003.mp3'
+skill_heimeiguizhihuo: 'https://seer2-resource.yuuinih.com/sound/skill/10445.mp3'
+skill_zhenkongzhihuan: 'https://seer2-resource.yuuinih.com/sound/skill/04_2_003.mp3'
+skill_zhenkongzhizhua: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_003.mp3'
+skill_huohuanzhili: 'https://seer2-resource.yuuinih.com/sound/skill/04_3_003.mp3'
+skill_zhenkongsuzhao: 'https://seer2-resource.yuuinih.com/sound/skill/04_1_003.mp3'
