--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -260,3 +260,8 @@
   tags: [emblem]
   effect:
     - effect_emblem_increase_chaoshui_nishui_chance_10_percent
+- id: mark_emblem_huoxinwenzhang
+  config: *emblem_config
+  tags: [emblem]
+  effect:
+    - effect_emblem_increase_huohuanzhixin_maxstacks_4
