--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -8451,3 +8451,161 @@
     - effect_skill_raise_spa_1_stage
     - effect_skill_raise_spa_1_stage_if_shuiliangbaohe
     - effect_skill_consume_mark_shuiliangbaohe
+- id: skill_huoyanzhihuan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 65
+  accuracy: 95
+  rage: 10
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_self_huohuanzhixin_3
+- id: skill_huoyanzhizhua
+  element: Fire
+  category: Physical
+  target: opponent
+  power: 70
+  accuracy: 95
+  rage: 15
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_15_each_huohuanzhixin
+    - effect_skill_consume_mark_huohuanzhixin
+- id: skill_lieyanzhihuan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 15
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_self_huohuanzhixin_2
+- id: skill_lieyanzhizhua
+  element: Fire
+  category: Physical
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 20
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_15_each_huohuanzhixin
+    - effect_skill_consume_mark_huohuanzhixin
+- id: skill_jisuhuohuan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 50
+  accuracy: 95
+  rage: 15
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_self_huohuanzhixin_1
+- id: skill_heiyanzhihuan
+  element: Fire
+  category: Special
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 20
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_self_huohuanzhixin_1
+- id: skill_heiyanzhizhua
+  element: Fire
+  category: Physical
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_15_each_huohuanzhixin
+    - effect_skill_consume_mark_huohuanzhixin
+- id: skill_heimeiguizhihuo
+  element: Fire
+  category: Climax
+  target: opponent
+  power: 170
+  accuracy: 100
+  rage: 100
+  priority: 0
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage_20_percent
+- id: skill_zhenkongzhihuan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 95
+  accuracy: 95
+  rage: 20
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_self_zhenkongzhixin
+- id: skill_zhenkongzhizhua
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  accuracy: 80
+  rage: 20
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_if_has_zhenkongzhixin
+- id: skill_huohuanzhili
+  element: Fire
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 20
+  priority: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage
+    - effect_skill_raise_spa_1_stage
+- id: skill_zhenkongsuzhao
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 15
+  priority: 1
+  sureHit: false
+  ignoreShield: false
+  tags: []
