--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -209,3 +209,5 @@ mark_yuzhiweilai: 'https://seer2-resource.yuuinih.com/png/markImage/3195.png'
 mark_chuansuoweilai: 'https://seer2-resource.yuuinih.com/png/markImage/3196.png'
 mark_shiguangchongsheng: 'https://seer2-resource.yuuinih.com/png/markImage/3198.png'
 mark_yuecuoyueyong: 'https://seer2-resource.yuuinih.com/png/markImage/3065.png'
+mark_huohuanzhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3071.png'
+mark_zhenkongzhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3072.png'
